Kubernetes/node-js-service-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: sps
  name: sps
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: sps
    spec:
      containers:
      - image: leexha/demo:26
        name: sps
        ports:
        - containerPort: 4000
          name: sps
