Kubernetes/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-standalone
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        selector: mongodb-standalone
    spec:
      containers:
      - name: mongodb-standalone
        image: mongo:4.0.8
        ports:
          - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: database
  name: database
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: database
