Kubernetes/node-js-service.1.yaml
apiVersion: v1
kind: Service
metadata:
  name: sps-app
  labels:
    name: sps-app
spec:
  type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    name: sps-app
